force-app/main/default/objects/Service_Queue_Counter__c/Service_Queue_Counter__c.object-meta.xml
<CustomObject>
    <label>Service Queue Counter</label>
    <pluralLabel>Service Queue Counters</pluralLabel>
    <nameField>
        <displayFormat>QC-{000000}</displayFormat>
        <label>Service Queue Counter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Contador de turnos por área y día (fila bloqueada con FOR UPDATE).</description>
</CustomObject>