force-app/main/default/objects/Service_Queue_Counter__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>