force-app/main/default/objects/Service_Queue_Counter__c/fields/Last_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Number__c</fullName>
    <label>Last Number</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>