force-app/main/default/objects/Service_Queue_Counter__c/fields/Now_Serving__c.field-meta.xml
<CustomField>
    <fullName>Now_Serving__c</fullName>
    <label>Now Serving</label>
    <type>Text</type>
    <length>20</length>
</CustomField>